--- a/app/views/error.hbs
+++ b/app/views/error.hbs
@@ -1,5 +1,4 @@
 
-  {{ message }}
-  {{ error.status }}
-  {{ error.stack }}  
-
+  {{ message }}<br />
+  {{ error }}<br />
+  {{ error.stack }}<br />
