--- a/app/views/contactEdit.hbs
+++ b/app/views/contactEdit.hbs
@@ -1,5 +1,13 @@
 <form action="/contacts/" method="POST">
-  <label for="name">Nom</label><input id="name" type="text" name="name" /><br />
-  <label for="mail">Mail</label><input id="mail" type="email" name="mail" /><br />
-  <input type="submit" value="Soumettre" />
+{{#with contact }}
+  {{#if id }}
+  <input type="hidden" name="id" value="{{ id }}" />
+  {{/if}}
+  <label for="name">Nom</label><input id="name" type="text" name="name" value="{{ fullName }}"/><br />
+  <label for="email">Mail</label><input id="email" type="email" name="email" value="{{ email }}" /><br />
+  <label for="phone">Téléphone</label><input id="phone" type="tel" name="phone" value="{{ phone }}" /><br />
+  <input type="submit" name="submit" value="Soumettre" />
+  <input type="reset" name="reset" value="RAZ" />
+  <input type="submit" name="cancel" value="Annuler" />
+{{/with}}
 </form>
