--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -3,3 +3,4 @@
   <h1>{{ title }}</h1>
   <p>Welcome to {{ title }}</p>
   <a href="contacts/">Contacts</href>
+  <a href="labels/">Etiquettes</href>
