First draft at Label managements

--- a/app/views/contactList.hbs
+++ b/app/views/contactList.hbs
@@ -14,6 +14,11 @@
         <td>{{ fullName }}</td>
         <td>{{ email }}</td>
         <td>{{ phone }}</td>
+        <td>
+          {{#labels}}
+            {{> label }}
+          {{/labels}}
+        </td>
       </tr>
     {{/contacts}}
     </tbody>
