--- a/app/views/contactList.hbs
+++ b/app/views/contactList.hbs
@@ -1,3 +1,12 @@
+<form method="GET" action="/contacts/">
+  <select name="tagId" id="tagId">
+    <option value="">&nbsp;</option>
+    {{#tags}}
+    <option value="{{ id }}">{{ name }}</option>
+    {{/tags}}
+  </select>
+  <input type="submit" value="Go" />
+</form>
 <table class="contact-list">
     <thead>
       <tr>
@@ -15,9 +24,9 @@
         <td>{{ email }}</td>
         <td>{{ phone }}</td>
         <td>
-          {{#labels}}
-            {{> label }}
-          {{/labels}}
+          {{#tags}}
+            {{> tag }}
+          {{/tags}}
         </td>
       </tr>
     {{/contacts}}
