--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -2,5 +2,5 @@
 
   <h1>{{ title }}</h1>
   <p>Welcome to {{ title }}</p>
-  <a href="contacts/">Contacts</href>
-  <a href="labels/">Etiquettes</href>
+  <a href="contacts/">Contacts</a>
+  <a href="tags/">Etiquettes</a>
