--- a/app/views/contactList.hbs
+++ b/app/views/contactList.hbs
@@ -14,6 +14,9 @@
         <th>Nom</th>
         <th>Mail</th>
         <th>Téléphone</th>
+        <th>Organisation</th>
+        <th>Adresse</th>
+        <th>Etiquettes</th>
       </tr>
     </thead>
     <tbody>
@@ -23,6 +26,8 @@
         <td>{{ fullName }}</td>
         <td>{{ email }}</td>
         <td>{{ phone }}</td>
+        <td>{{ organization }}</td>
+        <td>{{ formattedAddress }}</td>
         <td>
           {{#tags}}
             {{> tag }}
