--- a/app/views/partials/tagEdit.hbs
+++ b/app/views/partials/tagEdit.hbs
@@ -1,3 +1,3 @@
 <span class="tag" style="background-color:{{ color }};" >
-  {{ name }}&nbsp;<span class="tag-remove clickable" data-id="{{ id }}">X</span>
+  {{ name }}&nbsp;<span class="tag-remove clickable" data-id="{{ id }}">x</span>
 </span>
