--- a/app/views/contactList.hbs
+++ b/app/views/contactList.hbs
@@ -15,6 +15,7 @@
         <th>Mail</th>
         <th>Téléphone</th>
         <th>Organisation</th>
+        <th>Fonction</th>
         <th>Adresse</th>
         <th>Etiquettes</th>
       </tr>
@@ -27,6 +28,7 @@
         <td>{{ email }}</td>
         <td>{{ phone }}</td>
         <td>{{ organization }}</td>
+        <td>{{ title }}</td>
         <td>{{ formattedAddress }}</td>
         <td>
           {{#tags}}
