--- a/app/views/contactView.hbs
+++ b/app/views/contactView.hbs
@@ -4,6 +4,7 @@
   <dt>Mail</dt><dd>{{ email }}</dd>
   <dt>Téléphone</dt><dd>{{ phone }}</dd>
   <dt>Organisation</dt><dd>{{ organization }}</dd>
+  <dt>Fonction</dt><dd>{{ title }}</dd>
   {{#with address }}
   <dt>Adresse</dt><dd>
     <address>
