--- a/app/views/contactEdit.hbs
+++ b/app/views/contactEdit.hbs
@@ -7,6 +7,7 @@
   <label for="email">Mail</label><input id="email" type="email" name="email" value="{{ email }}" /><br />
   <label for="phone">Téléphone</label><input id="phone" type="tel" name="phone" value="{{ phone }}" /><br />
   <label for="organization">Organisation</label><input id="organization" type="text" name="organization" value="{{ organization }}" /><br />
+  <label for="title">Fonction</label><input id="title" type="text" name="title" value="{{ title }}" /><br />
   <fieldset>
     <legend>Adresse</legend>
     <label for="address.number">N°</label><input id="address.number" type="text" name="address.number" value="{{ address.number }}" /><br />
