Add text index for full text search, fixes #7

--- a/app/views/partials/contactFilters.hbs
+++ b/app/views/partials/contactFilters.hbs
@@ -1,9 +1,11 @@
 <form method="GET" action="/contacts/">
+  <label for="search">Recherche</label><input type="text" name="search" id="search" /><br />
   <label for="tagId">Etiquettes</label>
   <select multiple name="tagId" id="tagId">
     {{#tags}}
     <option value="{{ id }}">{{ name }}</option>
     {{/tags}}
   </select><br />
+
   <input type="submit" value="Filtrer" />
 </form>
