--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -4,3 +4,4 @@
   <p>Welcome to {{ title }}</p>
   <a href="contacts/">Contacts</a>
   <a href="tags/">Etiquettes</a>
+  <a href="/contacts/edit">Ajouter</a>
