--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -41,6 +41,7 @@
       <ul>
         <li><a href="/contacts/">Contacts</a></li>
         <li><a href="/tags/">Etiquettes</a></li>
+        <li><a href="/contacts/edit">Ajouter</a></li>
       </ul>
     </nav>
   </header>
