--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -8,6 +8,7 @@
   {{#if ENV_DEVELOPMENT}}
     <script src="http://localhost:35729/livereload.js"></script>
   {{/if}}
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <style>
     /* TODO Factor out */
     .tag {
