--- a/app/views/contactView.hbs
+++ b/app/views/contactView.hbs
@@ -1,45 +1,69 @@
 {{#with contact}}
-<dl>
-  <dt>Nom</dt><dd>{{ fullName }}</dd>
-  <dt>Mail</dt><dd>{{ email }}</dd>
-  <dt>Téléphone</dt><dd>{{ phone }}</dd>
-  <dt>Organisation</dt><dd>{{ organization }}</dd>
-  <dt>Fonction</dt><dd>{{ title }}</dd>
+<table class="contact pure-table">
+  <tr>
+    <td>Nom</td><td>{{ fullName }}</td>
+  </tr>
+  <tr>
+    <td>Mail</td><td>{{ email }}</td>
+  </tr>
+  <tr>
+    <td>Téléphone</td><td>{{ phone }}</td>
+  </tr>
+  <tr>
+    <td>Organisation</td><td>{{ organization }}</td>
+  </tr>
+  <tr>
+    <td>Fonction</td><td>{{ title }}</td>
+  </tr>
   {{#with address }}
-  <dt>Adresse</dt><dd>
-    <address>
-     <span>{{ number }}</span> <span>{{ street }}</span><br />
-     <span>{{ code }}</span> <span>{{ city }}</span><br />
-   </address>
-  </dd>
+  <tr>
+    <td>Adresse</td>
+      <td>
+      <address>
+       <span>{{ number }}</span> <span>{{ street }}</span><br />
+       <span>{{ code }}</span> <span>{{ city }}</span><br />
+     </address>
+    </td>
+  </tr>
   {{/with}}
-  <dt>Etiquettes</dt><dd>
-    <div>
-      {{#each tags}}
-        {{! TODO Find a way to factor tag and tagEdit}}
-        {{>tagEdit}}
-      {{else}}
-        Aucune étiquette
-      {{/each}}
-    </div>
-    <form method="POST" action="/contacts/{{ id }}/tags/">
-      <select name="tagId" id="tagId">
-        {{#each ../tags}}
-        <option value="{{ id }}">{{ name }}</option>
+  <tr>
+    <td>Etiquettes</td>
+    <td>
+      <div class="padded">
+        {{#each tags}}
+          {{! TODO Find a way to factor tag and tagEdit}}
+          {{>tagEdit}}
+        {{else}}
+          Aucune étiquette
         {{/each}}
-      </select>
-      <input type="submit" value="Ajouter" />
-    </form>
-  </dd>
-  <dt>Note</dt><dd>{{ note }}</dd>
-</dl>
+      </div>
+      <div class="padded">
+        <form method="POST" action="/contacts/{{ id }}/tags/" class="pure-form">
+          <select name="tagId" id="tagId">
+            {{#each ../tags}}
+            <option value="{{ id }}">{{ name }}</option>
+            {{/each}}
+          </select>
+          <button type="submit" class="pure-button pure-input-rounded" >
+            <i class="fa fa-plus"></i>
+          </button>
+        </form>
+      </div>
+    </td>
+  </tr>
+  <tr>
+    <td>Note</td><td>{{ note }}</td>
+  </tr>
+</table>
 {{/with}}
 {{#with contact}}
-<a href="edit/{{ id }}">Modifier</a>
-<button id="delete">Supprimer</button>
-{{/with}}
+<div class="padded">
+  <a href="edit/{{ id }}" class="pure-button pure-button-primary">Modifier</a>
+  <button id="delete" class="pure-button pure-button-error">Supprimer</button>
 <div>
-<a href="/contacts/">Retour à la liste</a>
+{{/with}}
+<div class="padded">
+<a href="/contacts/" class="pure-button">Retour à la liste</a>
 </div>
 
 <script>
