--- a/app/views/partials/tagEdit.hbs
+++ b/app/views/partials/tagEdit.hbs
@@ -1,3 +1,3 @@
-<span class="tag" style="background-color:{{ color }};" >
-  {{ name }}&nbsp;<span class="tag-remove clickable" data-id="{{ id }}">x</span>
+<span class="tag editable" style="background-color:{{ color }};" >
+  <span>{{ name }}</span>&nbsp;<span class="tag-remove clickable fa fa-close" data-id="{{ id }}"></span>
 </span>
