--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,8 +1,76 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+@padding-default : 5px;
+
+.padded-vertical {
+  padding : @padding-default 0px;
+}
+.padded-horizontal {
+  padding : 0px @padding-default;
+}
+
+.padded {
+    padding : @padding-default;
+}
+
+.left-offset {
+  margin-left : @padding-default;
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+}
+
+// Style
+.tag {
+  border-radius : 5px;
+  margin-left: 5px;
+  padding : 5px;
+
+  .tag-remove{
+    padding-left : 5px;
+  }
+}
+
+main {
+  margin: 20px;
+}
+
+.clickable {
+  cursor : pointer;
+}
+
+a.fa {
+  color: #AAA;
+  text-decoration: none;
+
+  :hover {
+    text-decoration: underline;
+  }
+}
+
+dl.twocolumn {
+    overflow: auto;
+}
+dl.twocolumn dt, dl.twocolumn dd {
+    float: left;
+    padding: 5px;
+    box-sizing: border-box;
+}
+dl.twocolumn dt {
+    clear: left;
+    width: 25%;
+    text-align : right;
+}
+dl.twocolumn dd {
+    width: 75%; /* or whatever's left over from dt */
+    margin-left: 0;
 }
