Add bower, change module structures

--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width">
   <title>{{ title }}</title>
 
-  <link rel="stylesheet" href="/css/vendor/pure-min.css">
-  <link rel="stylesheet" href="/lib/vendor/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/lib/pure/pure-min.css">
+  <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 
