--- a/app/views/contactView.hbs
+++ b/app/views/contactView.hbs
@@ -59,7 +59,7 @@
 {{#with contact}}
 <div class="padded">
   <a href="edit/{{ id }}" class="pure-button pure-button-primary">Modifier</a>
-  <button id="delete" class="pure-button pure-button-error">Supprimer</button>
+  <button id="delete" class="pure-button button-error">Supprimer</button>
 <div>
 {{/with}}
 <div class="padded">
