--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,22 +42,27 @@ a.fa {
 a.fa :hover {
   text-decoration: underline;
 }
-dl.twocolumn {
-  overflow: auto;
+.button-success,
+.button-error,
+.button-warning,
+.button-secondary {
+  color: white;
+  border-radius: 4px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
-dl.twocolumn dt,
-dl.twocolumn dd {
-  float: left;
-  padding: 5px;
-  box-sizing: border-box;
+.button-success {
+  background: #1cb841;
+  /* this is a green */
 }
-dl.twocolumn dt {
-  clear: left;
-  width: 25%;
-  text-align: right;
+.button-error {
+  background: #ca3c3c;
+  /* this is a maroon */
 }
-dl.twocolumn dd {
-  width: 75%;
-  /* or whatever's left over from dt */
-  margin-left: 0;
+.button-warning {
+  background: #df7514;
+  /* this is an orange */
+}
+.button-secondary {
+  background: #42b8dd;
+  /* this is a light blue */
 }
