--- a/public/css/style.less
+++ b/public/css/style.less
@@ -57,20 +57,27 @@ a.fa {
   }
 }
 
-dl.twocolumn {
-    overflow: auto;
+.button-success,
+.button-error,
+.button-warning,
+.button-secondary {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
-dl.twocolumn dt, dl.twocolumn dd {
-    float: left;
-    padding: 5px;
-    box-sizing: border-box;
+
+.button-success {
+    background: rgb(28, 184, 65); /* this is a green */
 }
-dl.twocolumn dt {
-    clear: left;
-    width: 25%;
-    text-align : right;
+
+.button-error {
+    background: rgb(202, 60, 60); /* this is a maroon */
 }
-dl.twocolumn dd {
-    width: 75%; /* or whatever's left over from dt */
-    margin-left: 0;
+
+.button-warning {
+    background: rgb(223, 117, 20); /* this is an orange */
+}
+
+.button-secondary {
+    background: rgb(66, 184, 221); /* this is a light blue */
 }
