--- a/public/css/style.less
+++ b/public/css/style.less
@@ -81,3 +81,8 @@ a.fa {
 .button-secondary {
     background: rgb(66, 184, 221); /* this is a light blue */
 }
+
+.pure-table tr.clickable:hover td {
+  // same as pure-table header
+  background-color: #e0e0e0;
+}
