--- a/app/views/contactEdit.hbs
+++ b/app/views/contactEdit.hbs
@@ -49,7 +49,11 @@
   </div>
   <fieldset class="padded">
     <input type="submit" name="submit" value="Soumettre" class="pure-button pure-button-primary"/>
-    <input type="submit" name="cancel" value="Annuler" class="pure-button" />
+    {{#if id }}
+    <a href="/contacts/{{ id }}" class="pure-button">Annuler</a>
+    {{else}}
+    <a href="/contacts/" class="pure-button">Annuler</a>
+    {{/if}}
   </fieldset>
   {{/with}}
 </form>
