--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -14,6 +14,8 @@
     <script src="http://localhost:35729/livereload.js"></script>
   {{/if}}
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/js/contacts-manager-client.js" type="text/javascript"></script>
+    <script src="/js/dom.js" type="text/javascript"></script>
 </head>
 <body>
   <header>
