--- a/public/css/style.less
+++ b/public/css/style.less
@@ -86,3 +86,11 @@ a.fa {
   // same as pure-table header
   background-color: #e0e0e0;
 }
+
+header {
+  position : relative;
+}
+.user-pane {
+  position : absolute;
+  right : 0px;
+}
