--- a/app/views/users/userView.hbs
+++ b/app/views/users/userView.hbs
@@ -4,6 +4,12 @@
     <td>Username</td><td>{{ username }}</td>
   </tr>
   <tr>
+    <td>Prénom</td><td>{{ name.first }}</td>
+  </tr>
+  <tr>
+    <td>Nom</td><td>{{ name.last }}</td>
+  </tr>
+  <tr>
     <td>Mail</td><td>{{ email }}</td>
   </tr>
   <tr>
