--- a/app/views/users/userView.hbs
+++ b/app/views/users/userView.hbs
@@ -23,6 +23,6 @@
   </tr>
 </table>
 <div class="padded">
-  <!-- <a href="edit/{{ id }}" class="pure-button pure-button-primary">Modifier</a> -->
+    <a href="edit/{{ id }}" class="pure-button pure-button-primary">Modifier</a>
 <div>
 {{/with}}
