--- a/app/views/tags/tagList.hbs
+++ b/app/views/tags/tagList.hbs
@@ -1,7 +1,9 @@
 <div class="padded">
   <div class="heading">
     <h1>Liste des Etiquettes</h1>
+    {{#isPermitted "tag:create" }}
     <a class="pure-button pure-button-primary left-offset" href="edit" title="Nouveau"><i class="fa fa-plus"></i></a>
+    {{/isPermitted }}
   </div>
   <table id="tag-list" class="tag-list pure-table">
       <thead>
