--- a/app/views/_partials/contactFilters.hbs
+++ b/app/views/_partials/contactFilters.hbs
@@ -1,26 +1,32 @@
 <div class="padded">
-  <span id="toggle-filter" class="pure-button button-toggle fa fa-filter" title="Filtrer"></span>
-  <div id="filters" class="hidden">
-    <form method="GET" action="/contacts/" class="pure-form pure-form-stacked">
+  <input type="checkbox" id="filters-toggle-state" class="toggle-state" name="active" value="true" {{#if query.active }}checked{{/if}}>
+  <label for="filters-toggle-state" id="toggle-filter" class="pure-button fa fa-filter toggle-state-button-active" title="Filtrer"></label>
+  <div id="filters" class="toggle-state-visible">
+    <div class="pure-control-group">
       <label for="search">Recherche</label>
-      <input type="text" name="search" id="search" class="pure-input-rounded" placeholder="Rechercher"/>
-      <br />
-      <label for="tagId">Etiquettes</label>
-      <select multiple name="tagId" id="tagId">
+      <input type="text" name="search" id="search" class="pure-input-rounded" value="{{ query.search }}" placeholder="Rechercher"/>
+    </div>
+    <div class="pure-control-group">
+      <label for="tags">Etiquettes</label>
+      <select multiple name="tags" id="tags">
         {{#tags}}
-        <option value="{{ id }}">{{ name }}</option>
+        <option value="{{ id }}" {{#if ../query.tags }}{{#inArray ../query.tags id}}selected{{/inArray}}{{/if}}>{{ name }}</option>
         {{/tags}}
-      </select><br />
+      </select>
+    </div>
+    <div class="pure-control-group">
+      <label for="name">Nom</label>
+      <input type="text" name="name" id="name" class="pure-input-rounded" value="{{ query.name }}" placeholder="Nom" />
+    </div>
+    <div class="pure-control-group">
+      <label for="address.code">Code Postal</label>
+      <input type="text" name="address.code" id="address.code" class="pure-input-rounded" value="{{ query.[address.code] }}" placeholder="Code Postal"/>
+    </div>
+    <div class="pure-control-group">
+      <label for="organization">Organisation</label>
+      <input type="text" name="organization" id="organization" class="pure-input-rounded" value="{{ query.organization }}" placeholder="Organisation"/>
+    </div>
 
-      <input type="submit" value="Filtrer" class="pure-button" />
-    </form>
+    <input type="submit" value="Filtrer" class="pure-button" />
   </div>
-  <script>
-    var filter = document.getElementById('toggle-filter'), filters = document.getElementById('filters'), visible = false;
-    filter.addEventListener('click', function(ev) {
-      visible = !visible;
-      filter.classList.toggle('pure-button-active', visible);
-      filters.classList.toggle('hidden', !visible);
-    });
-  </script>
 </div>
