--- a/public/css/style.less
+++ b/public/css/style.less
@@ -34,6 +34,7 @@ a {
   border-radius : 5px;
   margin-left: 5px;
   padding : 5px;
+  display : inline-block;
 
   .tag-remove{
     padding-left : 5px;
@@ -93,4 +94,24 @@ header {
 .user-pane {
   position : absolute;
   right : 0px;
+}
+
+// TOGGLES
+.toggle-state {
+   position: absolute;
+   top: -9999px;
+   left: -9999px;
+}
+
+.toggle-state-visible {
+  display : none;
+}
+
+.toggle-state:checked ~ .toggle-state-visible {
+  display : block;
+}
+
+.toggle-state:checked ~ .toggle-state-button-active {
+  // copied from pure-button-active
+  box-shadow: 0 0 0 1px rgba(0,0,0,.15) inset,0 0 6px rgba(0,0,0,.2) inset;
 }
