Basic export of all contacts

--- a/app/views/contacts/contactList.hbs
+++ b/app/views/contacts/contactList.hbs
@@ -44,6 +44,7 @@
         {{#if incomplete}}
         <input name="size" type="number" value="{{ size }}" min="0" max="200" step="10" size="3" />
         {{/if}}
+        <button name="action" type="submit" value="export.csv">Exporter</button>
     </div>
   </div>
 </form>
