Add filtering capacity for export

--- a/app/views/_partials/contactFilters.hbs
+++ b/app/views/_partials/contactFilters.hbs
@@ -10,7 +10,9 @@
       <label for="tags">Etiquettes</label>
       <select multiple name="tags" id="tags">
         {{#tags}}
-        <option value="{{ id }}" {{#if ../query.tags }}{{#inArray ../query.tags id}}selected{{/inArray}}{{/if}}>{{ name }}</option>
+        <option value="{{ id }}" {{#inArray ../query.tags id}}selected{{/inArray}}>
+          {{ name }}
+        </option>
         {{/tags}}
       </select>
     </div>
