--- a/app/views/contacts/contactList.hbs
+++ b/app/views/contacts/contactList.hbs
@@ -44,8 +44,12 @@
         {{#if incomplete}}
         <input name="size" type="number" value="{{ size }}" min="0" max="200" step="10" size="3" />
         {{/if}}
-        <button name="action" type="submit" value="export.csv">Exporter</button>
     </div>
+    {{#isPermitted "contact:export:csv" }}
+    <div class="padded">
+        <button name="action" type="submit" value="export.csv" class="pure-button pure-button-primary">Exporter</button>
+    </div>
+    {{/isPermitted}}
   </div>
 </form>
 <script>
