--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,5 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-  padding: 50px;
   font-family: 'Roboto', sans-serif;
 }
 
