--- a/app/views/_layouts/main.hbs
+++ b/app/views/_layouts/main.hbs
@@ -53,8 +53,7 @@
   {{{body}}}
   </main>
   <footer>
-    &copy Erwan Osouf for Belleville Citoyenne
+    &copy; Erwan Osouf for Belleville Citoyenne
   </footer>
-  <script src="/js/vue.js"></script>
   </body>
 </html>
