Fix Label for City

--- a/app/views/contacts/contactEdit.hbs
+++ b/app/views/contacts/contactEdit.hbs
@@ -38,7 +38,7 @@
       <input id="address.code" type="text" name="address.code" value="{{ address.code }}" /><br />
     </div>
     <div class="pure-control-group">
-      <label for="address.city">N°</label>
+      <label for="address.city">Ville</label>
       <input id="address.city" type="text" name="address.city" value="{{ address.city }}" /><br />
     </div>
   </fieldset>
