Update import management

--- a/app/views/import/contactImport.hbs
+++ b/app/views/import/contactImport.hbs
@@ -4,7 +4,8 @@
   <ul>
   <li>Prénom</li>
   <li>Nom</li>
-  <li>E-mail</li>
+  <li>E-mail 1</li>
+  <li>E-mail 2</li>
   <li>Téléphone 1</li>
   <li>Téléphone 2</li>
   <li>Organisation</li>
@@ -14,6 +15,7 @@
   <li>Code Postal</li>
   <li>Ville</li>
   <li>Note</li>
+  <li>Tags : 1 par colonne, 5 max</li>
   </ul>
 </span>
 {{#if message }}<div class="messages error">{{message}}</div>{{/if}}
