oops, fix url bug

--- a/app/views/contacts/contactDuplicates.hbs
+++ b/app/views/contacts/contactDuplicates.hbs
@@ -1,6 +1,6 @@
 <ul>
   {{#each contacts}}
-    <li><a href="duplicates/{{ this.ids }}">
+    <li><a href="/contacts/duplicates/{{ this.ids }}">
       <p> Il y a {{ this.count }} comptes avec pour nom :
       {{#each this._id.name}}
         {{ this }}
