--- a/app/views/contacts/chooseFromDuplicates.hbs
+++ b/app/views/contacts/chooseFromDuplicates.hbs
@@ -1,3 +1,4 @@
+<h3>Il y a {{ contacts.length }} comptes avec le meme prénom et nom de famille : </h3>
 {{#each contacts}}
   {{>contact}}
 {{/each}}
